# hpc-mlp-inference

./: .gitignore  CMakeLists.txt  README.md  TODO  cifar10_embeddings_mlp_notebook.ipynb  dataset.py  notes.md  run_strong_scaling_local.sh  run_test.sh  run_weak_scaling.sh  run_weak_scaling_local.sh
benchmark_CPU_Strong/: visualize_strong_scaling.ipynb
benchmark_CPU_Weak/: visualize_weak_scaling.ipynb
benchmark_MPI/: 16_8.out  1_1.out  8_16.out  plots.ipynb
benchmark_MPI/results/: 1_128.out  1_256.out  2_64.out  4_32.out
benchmark_MPI_Strong/: 16_64.out  1_128.out  1_32.out  1_64.out  2_64.out  32_64.out  4_64.out  64_64.out  8_64.out  visualize_strong_scaling.ipynb
benchmark_MPI_Weak/: visualize_weak_scaling.ipynb
build_cpu/: Makefile  cmake_install.cmake  mlp_infer_mpi
include/: CudaMLPModel.hpp  FlatMatrix.hpp  FlatMatrixView.hpp  FreeListAllocator.hpp  FreeListMemoryPool.hpp  LoggingAllocator.hpp  MLPModel.hpp  MatrixAlgorithms.hpp  MatrixConcepts.hpp  utils.hpp
results/: avx2_max_openmp_perf_bind-close_places-cores.txt  avx2_max_openmp_perf_bind-spread_places-cores.txt  avx2_max_openmp_perf_bind-true_places-cores.txt  avx2_max_openmp_perf_threads-only.txt  plot_strong_scaling.py
results/dardel_shared_strong_scaling/: baseline_no_omp.txt  baseline_no_omp_perf.txt  rows_t1.txt  rows_t128.txt  rows_t128_perf.txt  rows_t16.txt  rows_t16_perf.txt  rows_t1_perf.txt  rows_t2.txt  rows_t2_perf.txt  rows_t32.txt  rows_t32_perf.txt  rows_t4.txt  rows_t4_perf.txt  rows_t64.txt  rows_t64_perf.txt  rows_t8.txt  rows_t8_perf.txt  tiled_t1.txt  tiled_t128.txt  tiled_t128_close.txt  tiled_t128_close_perf.txt  tiled_t128_perf.txt  tiled_t128_spread.txt  tiled_t128_spread_perf.txt  tiled_t16.txt  tiled_t16_close.txt  tiled_t16_close_perf.txt  tiled_t16_perf.txt  tiled_t16_spread.txt  tiled_t16_spread_perf.txt  tiled_t1_close.txt  tiled_t1_close_perf.txt  tiled_t1_perf.txt  tiled_t1_spread.txt  tiled_t1_spread_perf.txt  tiled_t2.txt  tiled_t2_close.txt  tiled_t2_close_perf.txt  tiled_t2_perf.txt  (+26 more)
results/dardel_shared_weak_scaling/: baseline_no_omp_m16.txt  baseline_no_omp_m16_perf.txt  rows_t128_m2048.txt  rows_t128_m2048_perf.txt  rows_t16_m256.txt  rows_t16_m256_perf.txt  rows_t1_m16.txt  rows_t1_m16_perf.txt  rows_t2_m32.txt  rows_t2_m32_perf.txt  rows_t32_m512.txt  rows_t32_m512_perf.txt  rows_t4_m64.txt  rows_t4_m64_perf.txt  rows_t64_m1024.txt  rows_t64_m1024_perf.txt  rows_t8_m128.txt  rows_t8_m128_perf.txt  tiled_t128_m2048.txt  tiled_t128_m2048_close.txt  tiled_t128_m2048_close_perf.txt  tiled_t128_m2048_perf.txt  tiled_t128_m2048_spread.txt  tiled_t128_m2048_spread_perf.txt  tiled_t16_m256.txt  tiled_t16_m256_close.txt  tiled_t16_m256_close_perf.txt  tiled_t16_m256_perf.txt  tiled_t16_m256_spread.txt  tiled_t16_m256_spread_perf.txt  tiled_t1_m16.txt  tiled_t1_m16_close.txt  tiled_t1_m16_close_perf.txt  tiled_t1_m16_perf.txt  tiled_t1_m16_spread.txt  tiled_t1_m16_spread_perf.txt  tiled_t2_m32.txt  tiled_t2_m32_close.txt  tiled_t2_m32_close_perf.txt  tiled_t2_m32_perf.txt  (+26 more)
results/school_cluster_strong_scaling/: baseline_no_omp.txt  baseline_no_omp_perf.txt  rows_t1.txt  rows_t128.txt  rows_t128_close.txt  rows_t128_perf.txt  rows_t128_spread.txt  rows_t16.txt  rows_t16_close.txt  rows_t16_perf.txt  rows_t16_spread.txt  rows_t1_close.txt  rows_t1_perf.txt  rows_t1_spread.txt  rows_t2.txt  rows_t2_close.txt  rows_t2_perf.txt  rows_t2_spread.txt  rows_t32.txt  rows_t32_close.txt  rows_t32_perf.txt  rows_t32_spread.txt  rows_t4.txt  rows_t4_close.txt  rows_t4_perf.txt  rows_t4_spread.txt  rows_t64.txt  rows_t64_close.txt  rows_t64_perf.txt  rows_t64_spread.txt  rows_t8.txt  rows_t8_close.txt  rows_t8_perf.txt  rows_t8_spread.txt  tiled_t1.txt  tiled_t128.txt  tiled_t128_close.txt  tiled_t128_close_perf.txt  tiled_t128_perf.txt  tiled_t128_spread.txt  (+42 more)
results/school_cluster_weak_scaling/: baseline_no_omp_m16.txt  baseline_no_omp_m16_perf.txt  rows_t128_m2048.txt  rows_t128_m2048_perf.txt  rows_t16_m256.txt  rows_t16_m256_perf.txt  rows_t1_m16.txt  rows_t1_m16_perf.txt  rows_t2_m32.txt  rows_t2_m32_perf.txt  rows_t32_m512.txt  rows_t32_m512_perf.txt  rows_t4_m64.txt  rows_t4_m64_perf.txt  rows_t64_m1024.txt  rows_t64_m1024_perf.txt  rows_t8_m128.txt  rows_t8_m128_perf.txt  tiled_t128_m2048.txt  tiled_t128_m2048_close.txt  tiled_t128_m2048_close_perf.txt  tiled_t128_m2048_perf.txt  tiled_t128_m2048_spread.txt  tiled_t128_m2048_spread_perf.txt  tiled_t16_m256.txt  tiled_t16_m256_close.txt  tiled_t16_m256_close_perf.txt  tiled_t16_m256_perf.txt  tiled_t16_m256_spread.txt  tiled_t16_m256_spread_perf.txt  tiled_t1_m16.txt  tiled_t1_m16_close.txt  tiled_t1_m16_close_perf.txt  tiled_t1_m16_perf.txt  tiled_t1_m16_spread.txt  tiled_t1_m16_spread_perf.txt  tiled_t2_m32.txt  tiled_t2_m32_close.txt  tiled_t2_m32_close_perf.txt  tiled_t2_m32_perf.txt  (+26 more)
scripts/: run_perf_tests.sh
src/: MLPModel.cpp  avx2_fma_throughput_benchmark  avx2_fma_throughput_benchmark.cpp  bin_to_text.py  cuda_backend.cu  flat_matrix_benchmark.cpp  main.cpp  main_cuda.cpp  matrix_algorithms_tests.cpp
